// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Orcid  should display error if ORCID url redirect STATE response is invalid 1`] = `
<StandardPage
  className=""
  title="Link ORCID ID to UQ eSpace"
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "Cancel",
        "confirmButtonLabel": "OK",
        "confirmationMessage": <div>
          <p>
            In order to proceed you will now be directed to ORCID.org website.
          </p>
          <p>
            You will be redirected back after you have granted UQ access.
          </p>
        </div>,
        "confirmationTitle": "ORCID Grant Access",
      }
    }
    onRef={[Function]}
  />
  <Alert
    allowDismiss={false}
    dismissTitle="Click to dismiss this alert"
    message="Error has occurred during request and request cannot be processed. Invalid authorisation state response from ORCID.  Please contact eSpace administrators or try again later."
    orcidStateError="Invalid authorisation state response from ORCID. "
    showLoader={false}
    title="Error"
    type="error_outline"
  />
  <StandardCard
    className=""
    title="I already have an ORCID iD"
  >
    <div>
      <div>
        This option enables you to link your existing ORCID iD to UQ.
      </div>
    </div>
    <div
      className="columns action-buttons"
    >
      <div
        className="column is-hidden-mobile"
      />
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Link your existing ORCID iD"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={true}
        />
      </div>
    </div>
  </StandardCard>
  <StandardCard
    className=""
    title="I need an ORCID iD"
  >
    <div>
      <div>
        <p>
          This option enables you to create a new ORCID iD and link it with UQ.
        </p>
        <p>
          Use this option if you are unsure if you already have an ORCID iD. It will detect matches to your name and email from the ORCID registry and prompt you to log in to avoid creating a new ORCID iD.
        </p>
      </div>
    </div>
    <div
      className="columns action-buttons"
    >
      <div
        className="column is-hidden-mobile"
      />
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Create a new ORCID iD"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={true}
        />
      </div>
    </div>
  </StandardCard>
</StandardPage>
`;

exports[`Component Orcid  should display error if author update failed 1`] = `
<StandardPage
  className=""
  title="Link ORCID ID to UQ eSpace"
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "Cancel",
        "confirmButtonLabel": "OK",
        "confirmationMessage": <div>
          <p>
            In order to proceed you will now be directed to ORCID.org website.
          </p>
          <p>
            You will be redirected back after you have granted UQ access.
          </p>
        </div>,
        "confirmationTitle": "ORCID Grant Access",
      }
    }
    onRef={[Function]}
  />
  <Alert
    allowDismiss={false}
    dismissTitle="Click to dismiss this alert"
    message="Error has occurred during request and request cannot be processed. API IS NOT AVAILABLE Please contact eSpace administrators or try again later."
    orcidStateError="Invalid authorisation state response from ORCID. "
    showLoader={false}
    title="Error"
    type="error_outline"
  />
  <StandardCard
    className=""
    title="I already have an ORCID iD"
  >
    <div>
      <div>
        This option enables you to link your existing ORCID iD to UQ.
      </div>
    </div>
    <div
      className="columns action-buttons"
    >
      <div
        className="column is-hidden-mobile"
      />
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Link your existing ORCID iD"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={true}
        />
      </div>
    </div>
  </StandardCard>
  <StandardCard
    className=""
    title="I need an ORCID iD"
  >
    <div>
      <div>
        <p>
          This option enables you to create a new ORCID iD and link it with UQ.
        </p>
        <p>
          Use this option if you are unsure if you already have an ORCID iD. It will detect matches to your name and email from the ORCID registry and prompt you to log in to avoid creating a new ORCID iD.
        </p>
      </div>
    </div>
    <div
      className="columns action-buttons"
    >
      <div
        className="column is-hidden-mobile"
      />
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Create a new ORCID iD"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={true}
        />
      </div>
    </div>
  </StandardCard>
</StandardPage>
`;

exports[`Component Orcid  should render form uf account/author is set 1`] = `
<StandardPage
  className=""
  title="Link ORCID ID to UQ eSpace"
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "Cancel",
        "confirmButtonLabel": "OK",
        "confirmationMessage": <div>
          <p>
            In order to proceed you will now be directed to ORCID.org website.
          </p>
          <p>
            You will be redirected back after you have granted UQ access.
          </p>
        </div>,
        "confirmationTitle": "ORCID Grant Access",
      }
    }
    onRef={[Function]}
  />
  <StandardCard
    className=""
    title="I already have an ORCID iD"
  >
    <div>
      <div>
        This option enables you to link your existing ORCID iD to UQ.
      </div>
    </div>
    <div
      className="columns action-buttons"
    >
      <div
        className="column is-hidden-mobile"
      />
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Link your existing ORCID iD"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={true}
        />
      </div>
    </div>
  </StandardCard>
  <StandardCard
    className=""
    title="I need an ORCID iD"
  >
    <div>
      <div>
        <p>
          This option enables you to create a new ORCID iD and link it with UQ.
        </p>
        <p>
          Use this option if you are unsure if you already have an ORCID iD. It will detect matches to your name and email from the ORCID registry and prompt you to log in to avoid creating a new ORCID iD.
        </p>
      </div>
    </div>
    <div
      className="columns action-buttons"
    >
      <div
        className="column is-hidden-mobile"
      />
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Create a new ORCID iD"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={true}
        />
      </div>
    </div>
  </StandardCard>
</StandardPage>
`;

exports[`Component Orcid  should render nothing if account is set, but author is null 1`] = `<div />`;

exports[`Component Orcid  should render nothing if account/author is not loaded 1`] = `<div />`;
